# sandbox-azure-pipelines

./: .gitignore  Cargo.toml  Dockerfile  azure-pipelines.yml  build.rs  checkghossversion.toml  docker-compose.yml  echo-variables.yml  export-result-20190727.7.txt  export-result-macos-20190805.txt  export-result-windows-20190805.txt  foobar.md  linux-variables.yml  windows-variables.yml
asset/: fragment_release.graphql  fragment_tag.graphql
src/: lib.rs
src/myscript/: prelude.rs
