[package]
name = "rust-myscript"
version = "0.1.0"
authors = ["Satoru Sukawa <sukawasatoru.github@outlook.jp>"]
edition = "2018"

[build-dependencies]
failure = "0.1.5"

[dependencies]
log = "0.4.6"
env_logger = "0.6.1"
directories = "1.0.2"
dotenv = "0.14.0"
failure = "0.1.5"
regex = "1.1.6"
reqwest = "0.9.16"
serde = "1.0.91"
serde_derive = "1.0.91"
serde_json = "1.0.39"
structopt = "0.2.15"
toml = "0.5.0"
